--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Mpharma
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UwprJSIooFwVMGNxUVsq/LArGZSlFPYV40iLz/1s7V4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,23 +8,23 @@ LOG_CHANNEL=stderr
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -34,7 +34,7 @@ MAIL_PORT=587
 MAIL_USERNAME=idowujulius92@gmail.com
 MAIL_PASSWORD=lnjbnrzkyskoehcy
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=mpharma.com
+MAIL_FROM_ADDRESS=support@socialconnector.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
