--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:UwprJSIooFwVMGNxUVsq/LArGZSlFPYV40iLz/1s7V4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stderr
+LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
